# scau-nlp-2026-spring

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
docs/plan/: 2026-05-26-homework1-course-report-plan.md  2026-05-26-homework2-bert-training-plan.md  dadgnn-reproduction-plan.md
docs/superpowers/specs/: 2026-05-25-homework1-softmax-design.md
homework1/: README.md  main.py
homework1/src/: data_loader.py  features.py  model.py  optimizer.py  predict.py  train.py
homework2/: README.md  main.py
homework2/src/: __init__.py  data_loader.py  graph_utils.py  model.py  predict.py  train.py
nlp-text-classification-experiments/: sample_submission.csv  train_new_5shot.csv
scripts/: download_embeddings.py  patch_dgl.py
